--- a/index.html
+++ b/index.html
@@ -1,15 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alphabet Game</title>
+    <!-- Daisy Ui section link -->
+    <link href="https://cdn.jsdelivr.net/npm/daisyui@4.7.2/dist/full.min.css" rel="stylesheet" type="text/css" />
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
+
 <body>
-    <main>
-        <section></section>
-        <section></section>
+    <main class="min-h-screen bg-[#010313] bg-[url(/images/background.png)] bg-no-repeat bg-center">
+        <!-- Home Section -->
+        <section class="hidden">
+            <div class="text-white flex flex-col justify-center text-center items-center min-h-screen gap-10">
+                <h1 class="text-9xl ">ALPHABET CLASH</h1>
+                <p class="text-2xl font-medium">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
+                <button class="btn">Play Now</button>
+            </div>
+        </section>
+        <!-- playGround Section -->
+        <section class="">
+            <!-- screen -->
+           
+        </section>
+        <!-- Score section -->
         <section></section>
     </main>
 </body>
+
 </html>
