play ground section added

--- a/index.html
+++ b/index.html
@@ -21,12 +21,64 @@
             </div>
         </section>
         <!-- playGround Section -->
-        <section class="">
+        <section class="hidden">
             <!-- screen -->
-           
+            <div class="border-[16px] rounded-xl border-black w-[1100px] text-center absolute top-12 left-32">
+                <div class="artboard artboard-horizontal h-56 bg-[#FFFFFFB3]">
+                    <div>
+                        <p class="text-xl text-white font-bold bg-[#2F2941] w-[480px] p-4 text-center absolute left-[300px]">Don't watch keyboard  while playing...</p>
+                    </div>
+                    <div class=" h-full flex flex-col justify-center items-center">
+                        <p class="text-9xl text-black mt-8">Y</p>
+                    </div>
+                </div>
+            </div>
+            <!-- keyboard -->
+            <div class="absolute left-[480px] top-[350px]">
+                <div class="flex justify-center gap-1 my-1 w-full">
+                    <kbd class="kbd">q</kbd>
+                    <kbd class="kbd">w</kbd>
+                    <kbd class="kbd">e</kbd>
+                    <kbd class="kbd">r</kbd>
+                    <kbd class="kbd">t</kbd>
+                    <kbd class="kbd">y</kbd>
+                    <kbd class="kbd">u</kbd>
+                    <kbd class="kbd">i</kbd>
+                    <kbd class="kbd">o</kbd>
+                    <kbd class="kbd">p</kbd>
+                  </div> 
+                  <div class="flex justify-center gap-1 my-1 w-full">
+                    <kbd class="kbd">a</kbd>
+                    <kbd class="kbd">s</kbd>
+                    <kbd class="kbd">d</kbd>
+                    <kbd class="kbd">f</kbd>
+                    <kbd class="kbd">g</kbd>
+                    <kbd class="kbd">h</kbd>
+                    <kbd class="kbd">j</kbd>
+                    <kbd class="kbd">k</kbd>
+                    <kbd class="kbd">l</kbd>
+                  </div> 
+                  <div class="flex justify-center gap-1 my-1 w-full">
+                    <kbd class="kbd">z</kbd>
+                    <kbd class="kbd">x</kbd>
+                    <kbd class="kbd">c</kbd>
+                    <kbd class="kbd">v</kbd>
+                    <kbd class="kbd">b</kbd>
+                    <kbd class="kbd">n</kbd>
+                    <kbd class="kbd">m</kbd>
+                    <kbd class="kbd">/</kbd>
+                  </div>
+            </div>
+            <!-- health score -->
+            <div class="flex justify-between items-end pb-20 px-20 border-2 min-h-screen ">
+                <button class="btn bg-[#894189] rounded-full text-white ">Life: <span><img src="logo/heaart.svg" alt=""></span> <span>1</span></button>
+                <button class="btn bg-[#894189] rounded-full text-white ">Score: <span><img src="logo/monetization.svg" alt=""></span> <span>1</span></button>
+            </div>
         </section>
         <!-- Score section -->
-        <section></section>
+        <section class="hidden">
+            
+        </section>
     </main>
 </body>
 
