--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@
 <body>
     <main class="min-h-screen bg-[#010313] bg-[url(/images/background.png)] bg-no-repeat bg-center">
         <!-- Home Section -->
-        <section class="hidden">
+        <section id="home-screen">
             <div class="text-white flex flex-col justify-center text-center items-center min-h-screen gap-10">
                 <h1 class="text-9xl ">ALPHABET CLASH</h1>
                 <p class="text-2xl font-medium">Unleash Your Keyboard Kung Fu : Press “Enter” to Play</p>
-                <button class="btn">Play Now</button>
+                <button onclick="play()" class="btn">Play Now</button>
             </div>
         </section>
         <!-- playGround Section -->
-        <section class="hidden">
+        <section id="play-Ground" class="hidden">
             <!-- screen -->
             <div class="border-[16px] rounded-xl border-black w-[1100px] text-center absolute top-12 left-32">
                 <div class="artboard artboard-horizontal h-56 bg-[#FFFFFFB3]">
@@ -76,10 +76,10 @@
             </div>
         </section>
         <!-- Score section -->
-        <section class="hidden">
-            
-        </section>
+        
     </main>
+    <script src="script/utility.js"></script>
+    <script src="script/return.js"></script>
 </body>
 
 </html>
