--- a/index.html
+++ b/index.html
@@ -29,44 +29,44 @@
                         <p class="text-xl text-white font-bold bg-[#2F2941] w-[480px] p-4 text-center absolute left-[300px]">Don't watch keyboard  while playing...</p>
                     </div>
                     <div class=" h-full flex flex-col justify-center items-center">
-                        <p class="text-9xl text-black mt-8">Y</p>
+                        <p id="current-operand" class="text-9xl text-black mt-8 uppercase"></p>
                     </div>
                 </div>
             </div>
             <!-- keyboard -->
             <div class="absolute left-[480px] top-[350px]">
                 <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd class="kbd">q</kbd>
-                    <kbd class="kbd">w</kbd>
-                    <kbd class="kbd">e</kbd>
-                    <kbd class="kbd">r</kbd>
-                    <kbd class="kbd">t</kbd>
-                    <kbd class="kbd">y</kbd>
-                    <kbd class="kbd">u</kbd>
-                    <kbd class="kbd">i</kbd>
-                    <kbd class="kbd">o</kbd>
-                    <kbd class="kbd">p</kbd>
+                    <kbd id="w" class="kbd">w</kbd>
+                    <kbd id="q" class="kbd">q</kbd>
+                    <kbd id="e" class="kbd">e</kbd>
+                    <kbd id="r" class="kbd">r</kbd>
+                    <kbd id="t" class="kbd">t</kbd>
+                    <kbd id="y" class="kbd">y</kbd>
+                    <kbd id="u" class="kbd">u</kbd>
+                    <kbd id="i" class="kbd">i</kbd>
+                    <kbd id="o" class="kbd">o</kbd>
+                    <kbd id="p" class="kbd">p</kbd>
                   </div> 
                   <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd class="kbd">a</kbd>
-                    <kbd class="kbd">s</kbd>
-                    <kbd class="kbd">d</kbd>
-                    <kbd class="kbd">f</kbd>
-                    <kbd class="kbd">g</kbd>
-                    <kbd class="kbd">h</kbd>
-                    <kbd class="kbd">j</kbd>
-                    <kbd class="kbd">k</kbd>
-                    <kbd class="kbd">l</kbd>
+                    <kbd id="a" class="kbd">a</kbd>
+                    <kbd id="s" class="kbd">s</kbd>
+                    <kbd id="d" class="kbd">d</kbd>
+                    <kbd id="f" class="kbd">f</kbd>
+                    <kbd id="g" class="kbd">g</kbd>
+                    <kbd id="h" class="kbd">h</kbd>
+                    <kbd id="j" class="kbd">j</kbd>
+                    <kbd id="k" class="kbd">k</kbd>
+                    <kbd id="l" class="kbd">l</kbd>
                   </div> 
                   <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd class="kbd">z</kbd>
-                    <kbd class="kbd">x</kbd>
-                    <kbd class="kbd">c</kbd>
-                    <kbd class="kbd">v</kbd>
-                    <kbd class="kbd">b</kbd>
-                    <kbd class="kbd">n</kbd>
-                    <kbd class="kbd">m</kbd>
-                    <kbd class="kbd">/</kbd>
+                    <kbd id="z" class="kbd">z</kbd>
+                    <kbd id="x" class="kbd">x</kbd>
+                    <kbd id="c" class="kbd">c</kbd>
+                    <kbd id="v" class="kbd">v</kbd>
+                    <kbd id="b" class="kbd">b</kbd>
+                    <kbd id="n" class="kbd">n</kbd>
+                    <kbd id="m" class="kbd">m</kbd>
+                    <kbd id="/" class="kbd">/</kbd>
                   </div>
             </div>
             <!-- health score -->
@@ -76,7 +76,16 @@
             </div>
         </section>
         <!-- Score section -->
-        
+        <section class="hidden">
+            <div>
+                <h3 class="text-6xl text-white  flex justify-center pt-20">Wow Perfect !</h3>
+            </div>
+            <div class="border-2 w-96 h-80 gap-4 flex flex-col justify-center text-center items-center bg-gradient-to-r from-pink-500 to-blue-400 absolute  left-[480px] bottom-10">
+                <p class="text-white text-6xl"><span class="font-bold">Score :</span><span>14</span></p>
+                <button class="btn">Play Again</button>
+                <p class="text-white font-medium">Practice will make you Pro</p>
+            </div>
+        </section>
     </main>
     <script src="script/utility.js"></script>
     <script src="script/return.js"></script>
