--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
             <!-- keyboard -->
             <div class="absolute left-[480px] top-[350px]">
                 <div class="flex justify-center gap-1 my-1 w-full">
-                    <kbd id="w" class="kbd">w</kbd>
                     <kbd id="q" class="kbd">q</kbd>
+                    <kbd id="w" class="kbd">w</kbd>
                     <kbd id="e" class="kbd">e</kbd>
                     <kbd id="r" class="kbd">r</kbd>
                     <kbd id="t" class="kbd">t</kbd>
@@ -71,8 +71,10 @@
             </div>
             <!-- health score -->
             <div class="flex justify-between items-end pb-20 px-20 border-2 min-h-screen ">
-                <button class="btn bg-[#894189] rounded-full text-white ">Life: <span><img src="logo/heaart.svg" alt=""></span> <span>1</span></button>
-                <button class="btn bg-[#894189] rounded-full text-white ">Score: <span><img src="logo/monetization.svg" alt=""></span> <span>1</span></button>
+                <!-- display Life -->
+                <button class="btn bg-[#894189] rounded-full text-white ">Life: <img src="logo/heaart.svg" alt=""> <span>1</span></button>
+                <!-- display Score -->
+                <button class="btn bg-[#894189] rounded-full text-white ">Score:<img src="logo/monetization.svg" alt=""> <span id="current score">0</span></button>
             </div>
         </section>
         <!-- Score section -->
