added score life section by function

--- a/index.html
+++ b/index.html
@@ -72,9 +72,10 @@
             <!-- health score -->
             <div class="flex justify-between items-end pb-20 px-20 border-2 min-h-screen ">
                 <!-- display Life -->
-                <button class="btn bg-[#894189] rounded-full text-white ">Life: <img src="logo/heaart.svg" alt=""> <span>1</span></button>
+                <button class="btn bg-[#894189] rounded-full text-white ">Life: <img src="logo/heaart.svg" alt="">
+                    <span id="current-life">5</span></button>
                 <!-- display Score -->
-                <button class="btn bg-[#894189] rounded-full text-white ">Score:<img src="logo/monetization.svg" alt=""> <span id="current score">0</span></button>
+                <button class="btn bg-[#894189] rounded-full text-white ">Score:<img src="logo/monetization.svg" alt=""> <span id="current-score">0</span></button>
             </div>
         </section>
         <!-- Score section -->
