--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
                 <button class="btn bg-[#894189] rounded-full text-white ">Score:<img src="logo/monetization.svg" alt=""> <span id="current-score">0</span></button>
             </div>
         </section>
-        <!-- Score section -->
-        <section class="hidden">
+        <!--Final Score section -->
+        <section id="final-score" class="hidden">
             <div>
-                <h3 class="text-6xl text-white  flex justify-center pt-20">Wow Perfect !</h3>
+                <h3 class="text-6xl text-white  flex justify-center pt-20">Game over !</h3>
             </div>
             <div class="border-2 w-96 h-80 gap-4 flex flex-col justify-center text-center items-center bg-gradient-to-r from-pink-500 to-blue-400 absolute  left-[480px] bottom-10">
                 <p class="text-white text-6xl"><span class="font-bold">Score :</span><span>14</span></p>
