set default score and life value

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             </div>
             <div class="border-2 w-96 h-80 gap-4 flex flex-col justify-center text-center items-center bg-gradient-to-r from-pink-500 to-blue-400 absolute  left-[480px] bottom-10">
                 <p class="text-white text-6xl"><span class="font-bold">Score :</span><span>14</span></p>
-                <button class="btn">Play Again</button>
+                <button onclick="play()" class="btn">Play Again</button>
                 <p class="text-white font-medium">Practice will make you Pro</p>
             </div>
         </section>
