set life score and clear current alphabet bg color

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <p class="text-xl text-white font-bold bg-[#2F2941] w-[480px] p-4 text-center absolute left-[300px]">Don't watch keyboard  while playing...</p>
                     </div>
                     <div class=" h-full flex flex-col justify-center items-center">
-                        <p id="current-operand" class="text-9xl text-black mt-8 uppercase"></p>
+                        <p id="current-alphabet" class="text-9xl text-black mt-8 uppercase">A</p>
                     </div>
                 </div>
             </div>
@@ -84,7 +84,7 @@
                 <h3 class="text-6xl text-white  flex justify-center pt-20">Game over !</h3>
             </div>
             <div class="border-2 w-96 h-80 gap-4 flex flex-col justify-center text-center items-center bg-gradient-to-r from-pink-500 to-blue-400 absolute  left-[480px] bottom-10">
-                <p class="text-white text-6xl"><span class="font-bold">Score :</span><span>14</span></p>
+                <p class="text-white text-6xl"><span class="font-bold">Score: </span><span id="score">0</span></p>
                 <button onclick="play()" class="btn">Play Again</button>
                 <p class="text-white font-medium">Practice will make you Pro</p>
             </div>
