--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </style>
 
 <body class="font-poppins ">
-    <main class="min-h-screen bg-[#010313] bg-[url(/images/background.png)] bg-no-repeat bg-center">
+    <main class="min-h-screen bg-[#010313] bg-[url(images/background.png)] bg-no-repeat bg-center">
         <!-- Home Section -->
         <section id="home-screen">
             <div class="text-white flex flex-col justify-center text-center items-center min-h-screen gap-10">
